--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -22,5 +22,9 @@ jobs:
     steps: 
      
     - name: Checkout
+      id: Checkout
       uses: actions/checkout@v3
+
+    - name: Hello
+      id: Hello
       run: echo "Hello World"
