--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           go-version: ${{ env.golang_version }} # The Go version to download (if necessary) and use.
       - run: go run main.go
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: initial labeling
       #   uses: andymckay/labeler@master
