--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -12,7 +12,7 @@ on:
     
 
 env:
-  golang_version: '1.16.1'
+  golang_version: '1.18.1'
 
 
 jobs:
@@ -23,12 +23,16 @@ jobs:
       - uses: actions/checkout@v3
 
     # Set up golang in env
-      - uses: actions/setup-go@v3
-        with:
-          go-version: ${{ env.golang_version }} # The Go version to download (if necessary) and use.
-      - run: go run main.go
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Setup go
+        run: |
+          wget https://dl.google.com/go/go${golang_version}.linux-amd64.tar.gz
+          sudo tar -C /usr/local/ -xzf go1.13.5.linux-amd64.tar.gz
+          export PATH=$PATH:/usr/local/go/bin
+
+      - name: go
+        run: go version
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # - name: initial labeling
       #   uses: andymckay/labeler@master
