--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -25,8 +25,8 @@ jobs:
     # Set up golang in env
       - name: Setup go
         run: |
-          wget https://dl.google.com/go/go${golang_version}.linux-amd64.tar.gz
-          sudo tar -C /usr/local/ -xzf go1.13.5.linux-amd64.tar.gz
+          wget https://dl.google.com/go/go${{ env.golang_version }}.linux-amd64.tar.gz
+          sudo tar -C /usr/local/ -xzf go${{ env.golang_version }}.linux-amd64.tar.gz
           export PATH=$PATH:/usr/local/go/bin
 
       - name: go
