--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -33,7 +33,7 @@ jobs:
         run: go version
       
       - name: main.go
-        run: go run main.go
+        run: go run .
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
