--- a/.github/workflows/golang-build.yml
+++ b/.github/workflows/golang-build.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/setup-go@v3
         with:
           go-version: '^${{ env.golang_version }}' # The Go version to download (if necessary) and use.
-      - run:  go run main.go | echo "${{ secrets.github_token }}"
+      - run:  go version
 
     # Set up golang in env
       # - name: Setup go
