--- a/.github/workflows/golang-build.yml
+++ b/.github/workflows/golang-build.yml
@@ -46,7 +46,7 @@ jobs:
         run: go version
       
       - name: main.go
-        run: go run main.go
+        run: go run main.go test/label 
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
