example labels in workflow

--- a/.github/workflows/golang-build.yml
+++ b/.github/workflows/golang-build.yml
@@ -46,7 +46,7 @@ jobs:
         run: go version
       
       - name: main.go
-        run: go run main.go test/label 
+        run: go run main.go -l label1 -l label2
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
