--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,39 @@
 
-name: release
+name: Golang Release
 on:
   push:
+    # run only against tags
     tags:
-    - "v[0-9]+.[0-9]+.[0-9]+"
+      - '*'
+
+permissions:
+  contents: write
+  # packages: write
+  # issues: write
+
 jobs:
-  release:
+  goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v1
-      - name: Setup Go
-        uses: actions/setup-go@v1
+      -
+        name: Checkout
+        uses: actions/checkout@v2
         with:
-          go-version: '1.14.x'
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v1
+          fetch-depth: 0
+      -
+        name: Fetch all tags
+        run: git fetch --force --tags
+      -
+        name: Set up Go
+        uses: actions/setup-go@v2
         with:
+          go-version: 1.18
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
           version: latest
           args: release --rm-dist
         env:
