--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,10 @@
-
-name: Golang Release
+name: release
 on:
   push:
     # run only against tags
+    branches: [main]
     tags:
-      - '*'
+      - "v[0-9]+.[0-9]+.[0-9]+"
 
 permissions:
   contents: write
