--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Binaries for programs and plugins
+*.yaml.swp
 *.exe
 *.exe~
 *.dll
@@ -13,3 +14,5 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+dist/
