--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -25,6 +25,4 @@ archives:
     windows: 'windows'
     386: "i386"
     amd64: "amd64"
-  name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}"
-release:
-  prerelease: auto
+  name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
