--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -46,7 +46,9 @@ jobs:
         run: go version
       
       - name: main.go
-        run: go run main.go label -n test
+        run: |
+          go run main.go label -n label1
+          go run main.go label -n label2
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
