Labels: Colors and description (#15)
* Labels: Better formatting

* Labels: Colors and description

* Workflow update

* workflow typo

* only add label description

* omitempty

* *

* omitempty

* renaming

* json renaming

* label module init

* reformatting

* list label for repo

* typo in workflow

* unmarshal repo labels

* unmarshal non pointer

* respLabel

* soon giving up

* cmon bro

* this time for reals tho

* im going to lunch

* json parse

* fetch labels

* typo

* add label to existing repo

* add label test

* tests

* add label3 test

--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -46,7 +46,10 @@ jobs:
         run: go version
       
       - name: main.go
-        run: go run main.go -l label1 -l label2
+        run: |
+          go run main.go label -n label1
+          go run main.go label -n label2
+          go run main.go label -n label3
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
