--- a/.github/workflows/golang-test.yml
+++ b/.github/workflows/golang-test.yml
@@ -46,6 +46,7 @@ jobs:
           go run main.go label -n label/red
           go run main.go label -n label/blue
           go run main.go label -r -n label/red
+          go run main.go label -n label/orange -c D93F0B -d "This is an orange label"
         env:
           GITHUB_TOKEN: ${{ github.token }}
 
