--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,10 @@ name: release
 on:
   push:
     # run only against tags
-    branches: [main]
+    branches: 
+    - main
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]"
+      - "v*"
 
 permissions:
   contents: write
