--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,8 +2,8 @@ env:
   - GO111MODULE=on
 before:
   hooks:
+    - go mod download
     - go mod tidy
-    - go generate ./...
 builds:
 - main: .
   binary: "gaga"
@@ -20,6 +20,5 @@ archives:
 - replacements:
     darwin: 'darwin'
     linux: 'linux'
-    386: "i386"
     amd64: "amd64"
   name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
