--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -21,4 +21,4 @@ archives:
     darwin: 'darwin'
     linux: 'linux'
     amd64: "amd64"
-  name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  name_template: "{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}"
